[gd_scene load_steps=4 format=3 uid="uid://bmvoqsfu1l7v6"]

[ext_resource type="Script" uid="uid://douh8gqmu64ej" path="res://scripts/laser.gd" id="1_a7dhc"]
[ext_resource type="Texture2D" uid="uid://dg60bt4bcyf11" path="res://assets/Plasmashot1.PNG" id="2_a7dhc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xmihv"]
size = Vector2(4, 12)

[node name="Laser" type="Area2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_a7dhc")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, 6)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_a7dhc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 5)
shape = SubResource("RectangleShape2D_xmihv")

[node name="Timer" type="Timer" parent="."]
wait_time = 15.0
one_shot = true
autostart = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
